--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,84 @@
 accelerate==1.2.1
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
+annotated-types==0.7.0
+async-timeout==5.0.1
+attrs==24.3.0
+beautifulsoup4==4.12.3
+certifi==2024.12.14
+charset-normalizer==3.4.1
+click==8.1.8
+contourpy==1.3.1
+cycler==0.12.1
+datasets==3.2.0
+dill==0.3.8
+docker-pycreds==0.4.0
+filelock==3.16.1
+fonttools==4.55.3
+frozenlist==1.5.0
+fsspec==2024.9.0
+gitdb==4.0.12
+GitPython==3.1.44
+huggingface-hub==0.27.0
+idna==3.10
+Jinja2==3.1.5
+joblib==1.4.2
+kiwisolver==1.4.8
+MarkupSafe==3.0.2
+matplotlib==3.10.0
+mpmath==1.3.0
+multidict==6.1.0
+multiprocess==0.70.16
+networkx==3.4.2
 numpy==2.2.1
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+packaging==24.2
 pandas==2.2.3
 peft==0.14.0
+pillow==11.0.0
+platformdirs==4.3.6
+propcache==0.2.1
+protobuf==5.29.3
+psutil==6.1.1
+pyarrow==18.1.0
+pydantic==2.10.4
+pydantic_core==2.27.2
+pyparsing==3.2.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+sacremoses==0.1.1
+safetensors==0.4.5
+sentencepiece==0.2.0
+sentry-sdk==2.19.2
+setproctitle==1.3.4
+six==1.17.0
+smmap==5.0.2
+soupsieve==2.6
+sympy==1.13.1
 tabulate==0.9.0
+tokenizers==0.20.3
 torch==2.5.1
 tqdm==4.67.1
-transformers==4.47.1
-datasets~=3.2.0
-SentencePiece
-sacremoses
-matplotlib~=3.10.0
+transformers==4.46.3
+triton==3.1.0
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.3.0
+wandb==0.19.2
+xxhash==3.5.0
+yarl==1.18.3
